--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<script src="js/wizard.js"></script>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
-	<title>Wizard</title>
+	<title>Virtuelle Schlafberatung</title>
 </head>
 <body>
 	<div class="container">
@@ -31,7 +31,6 @@
 						<li onclick="run(this.id)" id="10030" data-point="3">alles ok</li>
 					</ul>
 				</div>
-
 				<div id="q200" style="display: none;">
 					<h2 class="question">Haben Sie besondere Ansprüche?</h2>
 					<ul>
@@ -50,7 +49,6 @@
 						<li onclick="run(this.id)" id="30050" data-point="50">Alle.</li>
 					</ul>
 				</div>
-				
 				<!-- Result Page -->
 				<div id="end" style="display: none;">
 					<h2 class="question">Vielen Dank für Ihre Teinahme.</h2>
@@ -58,27 +56,6 @@
 				</div>
 			</div>
 		</div>
-		<!-- <!-- <img onclick="run(this.id)" data-point=1 src="img/Bild1.jpg" alt="Bild1" id="image1"> -->
-		<!-- <img onclick="run(this.id)" data-point=1 src="img/Bild1.jpg" alt="Bild1" id="image1"> -->
-		<!-- <img onclick="run(this.id)" data-point=1 src="img/Bild1.jpg" alt="Bild1" id="myButton"> -->
-
-		<!-- <!-- <ul class="" id="question">
-			<li id="question1">
-				<!-- <img onclick="run(this.id)" data-point=1 src="img/Bild1.jpg" alt="Bild1" id="image1"> -->
-				<!-- <figcaption>Fig.1 - Blume.</figcaption>
-			</li>
-			<li id="question2">
-				<img onclick="run(this.id)" data-point=10 src="img/Bild7.jpg" alt="Bild1" id="image2">
-				<figcaption>Fig.2 - Trulli, Puglia, Italy.</figcaption>
-			</li>
-			<li id="question3">
-				<img onclick="run(this.id)" data-point=30 src="img/Bild3.jpg" alt="Bild1" id="image3">
-				<figcaption>Fig.3 - Orange Utan</figcaption>
-			</li>
-		</ul> -->
 	</div>
-	<footer>
-		
-	</footer>
 </body>
 </html>
