--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<li onclick="run(this.id)" id="30020" data-point="35">Naturfaser (Pflanzlich) Tencel, Baumwolle, Seide etc.</li>
 						<li onclick="run(this.id)" id="30030" data-point="40">Naturhaar (Tierisch) Wolle, Kamel, Kaschmir</li>
 						<li onclick="run(this.id)" id="30040" data-point="45">Daunen - Federn, Gänse, Enten</li>
-						<li onclick="run(this.id)" id="30050" data-point="50">Alle.</li>
+						<li onclick="run(this.id)" id="30050" data-point="50">Alle</li>
 					</ul>
 				</div>
 				<!-- Result Page -->
@@ -60,8 +60,7 @@
 						
 					</ul>
 					<p>Wir haben aufgrund ihrerer getroffenen Auswahl, die für Sie passenden Artikel zusammengestellt. Sie gelangen über den angegebenen Link zu den Produkten.</p>
-					<button class="btn btn-info" id="targetLink" target="_blank" href="">Meine Produkte anzeigen.</button>
-						<!-- <a id="targetLink" target="_blank" href="">Meine Produkte anzeigen.</a> -->
+					<a class="btn btn-info" id="targetLink" target="_blank" href="">Meine Produkte anzeigen</a>
 				</div>
 			</div>
 		</div>
