--- a/index.html
+++ b/index.html
@@ -24,32 +24,41 @@
 			<p class="customerService">Brauchen Sie Hilfe? Kundendienst <a href="tel:058 455 40 40">058 455 40 40</a></p>
 			<div class="questionContainer">
 				<div id="q100" style="display: none;">
-					<h2 class="question">Was haben Sie für ein Klima?</h2>
-					<span class="step">1/3</span>
+					<h2 class="question">Wie gut Sie schlafen, hängt massgeblich davon ab, ob Ihr Duvet genau auf Ihr persönliches Wärmeempfinden abgestimmt ist. Was trifft auf Sie zu?</h2>
+					<span class="step">1/4</span>
 					<ul class="question">
-						<li onclick="run(this.id)" id="10010" data-point="1">Ich friere</li>
-						<li onclick="run(this.id)" id="10020" data-point="2">Ich schwitze</li>
-						<li onclick="run(this.id)" id="10030" data-point="3">alles ok</li>
+						<li onclick="run(this.id)" id="10010" data-point="1">Meine Temperatur ist sehr ausgeglichen, mir ist weder zu kalt noch zu warm.</li>
+						<li onclick="run(this.id)" id="10020" data-point="2">Mir ist oft kalt und ich wache immer wieder kurz auf, weil ich friere.</li>
+						<li onclick="run(this.id)" id="10030" data-point="3">Mir wird schnell warm und ich schwitze oft in der Nacht.</li>
 					</ul>
 				</div>
 				<div id="q200" style="display: none;">
-					<h2 class="question">Haben Sie besondere Ansprüche?</h2>
-					<span class="step">2/3</span>
+					<h2 class="question">Jeder Mensch ist unterschiedlich und hat auch beim Schlafen andere Bedürfnisse. Die sollte bei der Auswahl des richtigen Duvets unbedingt beachtet werden. Bitte wählen Sie aus:</h2>
+					<span class="step">2/4</span>
 					<ul class="question">
-						<li onclick="run(this.id)" id="20010" data-point="10">Allergiker</li>
-						<li onclick="run(this.id)" id="20020" data-point="15">Veganer</li>
-						<li onclick="run(this.id)" id="20030" data-point="20">nichts davon</li>
+						<li onclick="run(this.id)" id="20010" data-point="10">Ich habe keine spezifischen Bedürfnisse und würde gerne aus allen Materialien wählen.</li>
+						<li onclick="run(this.id)" id="20020" data-point="15">Ich reagiere sensibel auf Hausstaubmilben, Tierhaare oder andere Allergene. Ich suche allergikerfreundliche Duvets.</li>
+						<li onclick="run(this.id)" id="20030" data-point="20">Es ist mir sehr wichtig, dass Produkte tierfrei sind. Ich suche vegane Bettinhalte.</li>
 					</ul>
 				</div>
 				<div id="q300" style="display: none;">
-					<h2 class="question">Welches Material bevorzugen Sie?</h2>
-					<span class="step">3/3</span>
+					<h2 class="question">Ein Duvet muss sich gut anfühlen und zu Ihnen passen. Gibt es ein Material, dass Sie bevorzugen?</h2>
+					<span class="step">3/4</span>
 					<ul class="question">
-						<li onclick="run(this.id)" id="30010" data-point="30">Synthetisch - Polyester, Mikrofaser</li>
-						<li onclick="run(this.id)" id="30020" data-point="35">Naturfaser (Pflanzlich) Tencel, Baumwolle, Seide etc.</li>
-						<li onclick="run(this.id)" id="30030" data-point="40">Naturhaar (Tierisch) Wolle, Kamel, Kaschmir</li>
-						<li onclick="run(this.id)" id="30040" data-point="45">Daunen - Federn, Gänse, Enten</li>
-						<li onclick="run(this.id)" id="30050" data-point="50">Alle</li>
+						<li onclick="run(this.id)" id="30010" data-point="30">Ich bin offen und will das Duvet nach Füllmenge auswählen.</li>
+						<li onclick="run(this.id)" id="30020" data-point="35">Daunen (Enten, Federn, Gänse)</li>
+						<li onclick="run(this.id)" id="30030" data-point="40">Naturhaar (Kamel, Kaschmir, Wolle)</li>
+						<li onclick="run(this.id)" id="30040" data-point="45">Naturfaser (Baumwolle, Seide, Tencel)</li>
+						<li onclick="run(this.id)" id="30050" data-point="50">Synthetik (Polyester, Microfaser)</li>
+					</ul>
+				</div>
+				<div id="q400" style="display: none;">
+					<h2 class="question">Sommerduvets zeichnen sich in der Regel durch weniger Füllung aus. Im Winter darf das Duvet schwerer sein. Für welche Jahreszeit suchen Sie ein Duvet?</h2>
+					<span class="step">4/4</span>
+					<ul class="question">
+						<li onclick="run(this.id)" id="40010" data-point="243">Ich suche ein Duvet für die warme Jahreszeit oder für geheizten Schlafzimmer.</li>
+						<li onclick="run(this.id)" id="40020" data-point="327">Ich suche eine kuschelige, schwere Decke für den Winter.</li>
+						<li onclick="run(this.id)" id="40030" data-point="432">Am liebsten wäre mir eine Bettdecke, die ich das ganze Jahr über nutzen kann und die je nach Saison individuell anpassbar ist.</li>
 					</ul>
 				</div>
 				<!-- Result Page -->
