change the Intro Text

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		<div class="content image">
 		</div>
 		<div class="content">
-			<h1>Welcher Schlaftyp sind Sie?</h1>
-			<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi, nam accusamus. Doloribus facere molestiae neque commodi autem assumenda, magni, excepturi repellendus laboriosam incidunt ut itaque delectus maxime id optio eius.</p>
+			<h1>Ratgeber: Duvet</h1>
+			<p>Es gibt wohl kaum etwas Schöneres, als sich nach einem langen Tag ins eigene Bett zu kuscheln. Das Duvet übernimmt dabei eine wichtige(zentrale?) Rolle und begleitet Sie durch die Nacht. Wir unterstützen Sie bei der Auswahl Ihres perfekten Duvets und berücksichtigen dabei Ihre persönlichen Bedürfnisse und Wünsche. Bitte beantworten Sie dafür folgende Fragen:</p>
 			<button class="btn btn-info" id="start" onclick="init()">Beginnen</button>
 		</div>
 	</div>
